--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">VKInfo</string>
-    <string name="id">Введи id пользователя</string>
+    <string name="id">Введи id в Вконтакте</string>
     <string name="search">Search!</string>
     <string name="result">Результат будет отображен здесь</string>
 </resources>
