--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="id">Введи id в Вконтакте</string>
     <string name="search">Search!</string>
     <string name="result">Результат будет отображен здесь</string>
+
+    <string name="error_message">Произошла ошибка.Попробуйте еще раз.</string>
 </resources>
